# my_mom

./: .cursorignore  .gitignore  AGENTS.md  INSTALL.md  MANIFEST.in  PACKAGE.md  README.md  Untitled  force_clear_data.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
.claude/commands/: openspec-apply.md  openspec-archive.md  openspec-proposal.md
.claude/skills/frontend-design/: LICENSE.txt
.claude/skills/query-knowledge-base/: SKILL.md
.cursor/commands/: openspec-apply.md  openspec-archive.md  openspec-proposal.md
.cursor/plans/: 项目历史记录.md
backend/: __init__.py  config.py  main.py  search_skills.py
backend/api/: __init__.py  memories.py  models.py  search.py
backend/core/: __init__.py  chroma_db.py  embedding.py  sqlite_db.py
backend/data/: memories.db
backend/data/chroma/: chroma.sqlite3
backend/static/: index.html
backend/static/assets/: index-C-H1xnhT.js  index-CIpNiQ7Z.css  index-DAG8RDet.css  index-DViD9qa9.css  index-DqwREL8R.js  index-DuGefKpA.js  index-DzrqV_7m.js  index-Vla4dZW2.css
backend/utils/: text_splitter.py
docu/: AI知识记忆库 产品需求文档 (PRD).md  技术选型文档.md  架构设计文档.md  版本迭代规划.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: index.js
redeme/: ARCHITECTURE.md  OPEN_SKILLS.md  PACKAGE.md  PROJECT_DETAILS.md
scripts/: build_dist.py  build_package.py  check_and_start.py  publish.py  publish_test.py  run_dev.py  search_sqlite.py  search_vector.py  store_data.py
skills/myMom/: SKILL.md
test/: Skills说明文档.md
(+47 files in other folders)
